--- a/styles/css-index.css
+++ b/styles/css-index.css
@@ -1,16 +1,14 @@
-/* Reset de estilos */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* Fondo y tipografía global */
 body {
     background-color: #141414;
     color: white;
     font-family: Arial, sans-serif;
-    background-image: url('https://image.tmdb.org/t/p/w1280/dQJ9D0fA2gLMnJjQ8YflSxCk5lX.jpg'); /* Fondo de película */
+    background-image: url('https://image.tmdb.org/t/p/w1280/dQJ9D0fA2gLMnJjQ8YflSxCk5lX.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -20,7 +18,6 @@ body {
     justify-content: space-between;
 }
 
-/* Estilos para el menú desplegable */
 nav {
     background-color: rgba(0, 0, 0, 0.7);
     padding: 15px;
@@ -49,7 +46,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #e50914; /* Rojo Netflix */
+    color: #e50914;
 }
 
 nav .dropdown {
@@ -80,12 +77,11 @@ nav .dropdown:hover .dropbtn {
     background-color: #444;
 }
 
-/* Sección de bienvenida */
 .welcome {
     text-align: center;
     margin-top: 120px;
     padding: 20px;
-    background-color: rgba(0, 0, 0, 0.6); /* Fondo oscuro para el texto */
+    background-color: rgba(0, 0, 0, 0.6);
     border-radius: 10px;
     max-width: 600px;
     margin-left: auto;
@@ -117,7 +113,6 @@ nav .dropdown:hover .dropbtn {
     background-color: #b00712;
 }
 
-/* Galería de imágenes */
 .image-gallery {
     display: flex;
     justify-content: center;
@@ -136,7 +131,6 @@ nav .dropdown:hover .dropbtn {
     transform: scale(1.1);
 }
 
-/* Pie de página */
 footer {
     background-color: #141414;
     padding: 20px;
@@ -152,12 +146,12 @@ footer {
     display: inline-block;
     margin-top: 20px;
     font-size: 1.2rem;
-    color: #e50914; /* Rojo de Cinepolis */
+    color: #e50914;
     text-decoration: none;
     font-weight: bold;
     transition: color 0.3s ease;
 }
 
 .more-button:hover {
-    color: #b00712; /* Rojo más oscuro al hacer hover */
+    color: #b00712;
 }
